<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_red"
    android:orientation="vertical"
    tools:context="com.my2048.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvLS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowestscore"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvlowestScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="35sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bestscore"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvBestScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="35sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="35sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/now_time"
                android:textSize="35sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.my2048.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/dark_red" >
        </com.my2048.GameView>

        <com.my2048.AnimLayer
            android:id="@+id/animLayer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.my2048.AnimLayer>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnHelp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_skin1"
            android:text="@string/help"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnRestart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_skin1"
            android:text="@string/restart"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>